# TrivialOS

./: README.md  TESTING.txt  cp.sh  results.tsv
libnfs/include/: libnfs-private.h
libnfs/lib/: libnfs.c  nfs_v3.c  socket.c
projects/aos/: .gitignore  CMakeLists.txt
projects/aos/apps/clock_driver/: CMakeLists.txt
projects/aos/apps/clock_driver/src/: clock.c  clock.h  device.c
projects/aos/apps/forkbomb/: CMakeLists.txt
projects/aos/apps/forkbomb/src/: forkbomb.c
projects/aos/apps/mem_test/: CMakeLists.txt
projects/aos/apps/mem_test/src/: mem_test.c
projects/aos/apps/nx_test/: CMakeLists.txt
projects/aos/apps/nx_test/src/: nx_test.c
projects/aos/apps/original_sosh/: CMakeLists.txt
projects/aos/apps/rdonly_test/: CMakeLists.txt
projects/aos/apps/rdonly_test/src/: rdonly_test.c
projects/aos/apps/sleep10/: CMakeLists.txt
projects/aos/apps/tick/: CMakeLists.txt
projects/aos/libclock/: CMakeLists.txt
projects/aos/libclock/src/: clock.c  libclock.c
projects/aos/libsosapi/include/: sos.h  syscalls.h
projects/aos/libsosapi/src/: sos.c  sys_morecore.c  sys_stdio.c  vsyscall.c
projects/aos/sos/: CMakeLists.txt
projects/aos/sos/src/: elf.c  elfload.h  main.c  mapping.c  mapping.h  network.c  network.h  process.c  process.h  tests.c  vmem_layout.h
projects/aos/sos/src/fs/: nfs.c  (+3 more)
projects/libelf/include/elf/: elf64.h
projects/libutils/: CMakeLists.txt
projects/libutils/include/utils/: heap.h  priorityqueue.h  queue.h  rolling_id.h  rollingarray.h
projects/libutils/src/: heap.c  priorityqueue.c  queue.c  rolling_id.c  rollingarray.c
(+35 files in other folders)
